recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:3: error: '(' expected but identifier found.
  if l.tail.tail == Nil return l.tail;
     ^ButLast:3: error: illegal start of simple expression
  if l.tail.tail == Nil return l.tail;
                                     ^